--- a/wizify_derive/Cargo.toml
+++ b/wizify_derive/Cargo.toml
@@ -2,6 +2,11 @@
 name = "wizify_derive"
 version = "0.0.1"
 edition = "2024"
+authors = ["Caleb Simmons"]
+license = "MIT or Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/CalSimmon/wizify-rs"
+keywords = ["wizard", "creation", "create", "dialogue"]
 
 [lib]
 name = "wizify_derive"
