--- a/wizify_derive/Cargo.toml
+++ b/wizify_derive/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "wizify_derive"
+description = "A macro library for generating a creation wizard from a struct"
 version = "0.0.1"
 edition = "2024"
 authors = ["Caleb Simmons"]
