chore(docs) - 20250524 - Updated Cargo.toml in both wizify and wizify_derive modules, and made a copy of the READMEs into both as well.

--- a/wizify_derive/Cargo.toml
+++ b/wizify_derive/Cargo.toml
@@ -4,7 +4,7 @@ description = "A macro library for generating a creation wizard from a struct"
 version = "0.0.1"
 edition = "2024"
 authors = ["Caleb Simmons"]
-license = "MIT or Apache-2.0"
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/CalSimmon/wizify-rs"
 keywords = ["wizard", "creation", "create", "dialogue"]
