--- a/wizify/Cargo.toml
+++ b/wizify/Cargo.toml
@@ -10,5 +10,5 @@ repository = "https://github.com/CalSimmon/wizify-rs"
 keywords = ["wizard", "creation", "create", "dialogue"]
 
 [dependencies]
-wizify_derive = { version = "*", path = "../wizify_derive/"}
+wizify_derive = "0.0.2"
 dialoguer = "0.11.0"
